syntax = "proto2";

package sf.solana.block_meta.v1;

message PbIotConfigFields {
  required int32 min_gain = 1;
  required int32 max_gain = 2;
  required uint64 full_location_staking_fee = 3;
  required uint64 dataonly_location_staking_fee = 4;
}

message PbMobileConfigFields {
  required uint64 full_location_staking_fee = 1;
  required uint64 dataonly_location_staking_fee = 2;
}

message PbConfigSettingsV0Layout {
  required string name = 1;
  optional PbIotConfigFields iotConfigFields = 2;
  optional PbMobileConfigFields mobileConfigFields = 3;
}

message PbInitializeRewardableEntityConfigArgsV0Layout {
  required string symbol = 1;
  required PbConfigSettingsV0Layout settings = 2;
}

message PbInitializeRewardableEntityConfigV0Layout {
  required PbInitializeRewardableEntityConfigArgsV0Layout args = 1;
}

message Arg {
  required string instruction_type = 1;
  optional PbInitializeRewardableEntityConfigV0Layout initializeRewardableEntityConfigV0 = 2;
}

message InputAccounts {
  optional string payer = 1;
  optional string subDao = 2;
  optional string authority = 3;
  optional string rewardableEntityConfig = 4;
  optional string systemProgram = 5;
}

message Meta {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required string dapp = 4;
  required uint64 block_slot = 5;
  required uint32 instruction_index = 7;
  required bool is_inner_instruction = 8;
  required uint32 inner_instruction_index = 9;
  required string instruction_type = 10;
  required Arg args = 11;
  required InputAccounts input_accounts = 12;
}

message Output {
  repeated Meta data = 1;
}